--- a/WooCommerce/Resources/id.lproj/Localizable.strings
+++ b/WooCommerce/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-06-25 11:54:04+0000 */
+/* Translation-Revision-Date: 2019-08-08 00:54:04+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: id */
@@ -148,7 +148,7 @@
 /* Shown while the app waits for the site creation process to complete. */
 "Completing Signup" = "Menyelesaikan Pendaftaran";
 
-/* VoiceOver accessibility hint, informing the user that the row can be tapped and an email composer view will appear. */
+/* Accessibility hint, informing that a row can be tapped and an email composer view will appear. */
 "Composes a new email message to the billing customer." = "Menulis pesan email baru kepada pelanggan tertagih.";
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to create a new order note. */
@@ -177,6 +177,9 @@
 
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "Salin";
+
+/* Copy tracking number button title */
+"Copy Tracking Number" = "Menyalin Nomor Pelacakan";
 
 /* Message shown when site purchases API failed */
 "Could not check site purchases." = "Tidak dapat memeriksa pembelian situs.";
@@ -261,11 +264,17 @@
 /* WordPress.com Missing Token */
 "Dotcom Missing Token" = "Dotcom Token Tidak Ada";
 
+/* WordPress.com error thrown when the user has no permission to view site stats. */
+"Dotcom No Stats Permission" = "Izin Tanpa Statistik Dotcom";
+
 /* WordPress.com Request Failure */
 "Dotcom Request Failed" = "Dotcom Permintaan Gagal";
 
 /* WordPress.com Error thrown when the response body is empty */
 "Dotcom Response Empty" = "Dotcom Respons Kosong";
+
+/* WordPress.com error thrown when the Jetpack site stats module is disabled. */
+"Dotcom Stats Module Disabled" = "Modul Statistik Dotcom Dinonaktifkan";
 
 /* WordPress.com Invalid Token */
 "Dotcom Token Invalid" = "Dotcom Token Tidak Valid";
@@ -491,8 +500,8 @@
 /* Title of a button. */
 "Lost your password?" = "Lupa sandi Anda?";
 
-/* Tagline after the heart icon, displayed to the user */
-"Made with love by Automattic" = "Dibuat dengan penuh cinta oleh Automattic";
+/* It reads 'Made with love by Automattic. We’re hiring!'. Place \'We’re hiring!' between `<a>` and `</a>` */
+"Made with love by Automattic. <a href=\"https:\/\/automattic.com\/work-with-us\/\">We’re hiring!<\/a>" = "Dibuat dengan penuh cinta oleh Automattic. <a href=\"https:\/\/automattic.com\/work-with-us\/\">Kami membuka lowongan!<\/a>";
 
 /* Login Prologue Legend */
 "Manage orders, track sales and monitor store activity with real-time alerts." = "Kelola pesanan, lacak penjualan, dan pantau aktivitas toko dengan pemberitahuan real-time.";
@@ -646,7 +655,7 @@
    Order number title */
 "Order #(viewModel.order.number)" = "Pesanan #(viewModel.order.number)";
 
-/* Displayed whenever the Details for an Order that just got deleted was onscreen. It reads: Order {order number} has been deleted from your store. */
+/* Displayed whenever an Order gets deleted. It reads: Order {order number} has been deleted from your store. */
 "Order %@ has been deleted from your store" = "Pesanan %@ telah dihapus dari toko Anda";
 
 /* Order notes section title */
@@ -683,6 +692,9 @@
 
 /* Payment section title */
 "Payment" = "Pembayaran";
+
+/* Payment of <currency symbol><payment total> received via (payment method title) */
+"Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "Pembayaran sebesar (subject.totalValue) diterima melalui (order.paymentMethodTitle)";
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "Pembayaran sebesar (totalValue) diterima melalui (order.paymentMethodTitle)";
@@ -753,7 +765,7 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "Produk %ld telah dihapus dari toko Anda";
 
-/* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
+/* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Berikan pilihan untuk menelepon atau mengirim pesan ke pelanggan tertagih.";
 
 /* Add Custom shipping provider. Title of cell presenting the provider name */
@@ -1160,6 +1172,9 @@
 
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Tidak dapat mengubah status pesanan #(orderID)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(order.orderID)" = "Tidak dapat menghapus pelacakan untuk pesanan #(order.orderID)";
 
 /* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
 "Unable to delete tracking for order #(orderID)" = "Tidak dapat menghapus pelacakan untuk pesanan #(orderID)";
